[package]
name = "yaros"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = { version = "0.9.31", features = ["map_physical_memory"]}
volatile = "0.2.7"
spin = "0.10.0"
x86_64 = "0.14.13"
uart_16550 = "0.3.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false


[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc"]

[dependencies.futures-channel]
version = "0.3.31"
default-features = false
features = ["alloc"]


[package.metadata.bootimage]
test-args = [
          "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio",
          "-display", "none",
          "-drive" , "file=./disk.img,format=raw",
]
test-success-exit-code = 33

[[test]]
name= "should_panic"
harness = false

[[test]]
name= "stack_overflow"
harness = false
